--- a/Informe3/informe3.tex
+++ b/Informe3/informe3.tex
@@ -14,7 +14,7 @@
 \usepackage{graphicx}
 \usepackage{adjustbox}
 \usepackage{subcaption}
-\usepackage[rightcaption]{sidecap}
+\usepackage{floatrow}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	headers & footers							%
@@ -39,7 +39,6 @@
 \newcommand{\emailtwo}{guillermo.baeza@alumnos.usm.cl}
 \newcommand{\roltwo}{2973600-6}
 
-\sidecaptionvpos{figure}{c}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	documento									%
@@ -86,11 +85,48 @@
 \section{Descripción}
 
 \section{Análisis y Desarrollo}
+\subsection{Instalación httpd}
+\begin{figure}[ht]
+\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,top},capbesidewidth=7cm}}]{figure}[\FBwidth]
+{\caption{Repositorios de descarga de paquetes de CentOs}\label{fig:repositorios}}
+{\includegraphics[width=10cm]{screenshots/httpd-install/repositorios-centos.png}}
+\end{figure}
 
-\begin{SCfigure}
-  \centering
-  \includegraphics[height=7cm]{screenshots/centosrepos.png}  
-  \caption{explicacion de la foto}
-\end{SCfigure}
+\begin{figure}[ht]
+\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,top},capbesidewidth=7cm}}]{figure}[\FBwidth]
+{\caption{Repositorios de descarga de paquetes de CentOs}\label{fig:repositorios}}
+{\includegraphics[width=10cm]{screenshots/httpd-install/repositorios-centos.png}}
+\end{figure}
+
+\begin{figure}[ht]
+\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,top},capbesidewidth=7cm}}]{figure}[\FBwidth]
+{\caption{Repositorios de descarga de paquetes de CentOs}\label{fig:repositorios}}
+{\includegraphics[width=10cm]{screenshots/httpd-install/repositorios-centos.png}}
+\end{figure}
+
+\begin{figure}[ht]
+\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,top},capbesidewidth=7cm}}]{figure}[\FBwidth]
+{\caption{Repositorios de descarga de paquetes de CentOs}\label{fig:repositorios}}
+{\includegraphics[width=10cm]{screenshots/httpd-install/repositorios-centos.png}}
+\end{figure}
+
+\begin{figure}[ht]
+\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,top},capbesidewidth=7cm}}]{figure}[\FBwidth]
+{\caption{Repositorios de descarga de paquetes de CentOs}\label{fig:repositorios}}
+{\includegraphics[width=10cm]{screenshots/httpd-install/repositorios-centos.png}}
+\end{figure}
+
+\begin{figure}[ht]
+\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,top},capbesidewidth=7cm}}]{figure}[\FBwidth]
+{\caption{Repositorios de descarga de paquetes de CentOs}\label{fig:repositorios}}
+{\includegraphics[width=10cm]{screenshots/httpd-install/repositorios-centos.png}}
+\end{figure}
+
+\begin{figure}[ht]
+\floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,top},capbesidewidth=7cm}}]{figure}[\FBwidth]
+{\caption{Repositorios de descarga de paquetes de CentOs}\label{fig:repositorios}}
+{\includegraphics[width=10cm]{screenshots/httpd-install/repositorios-centos.png}}
+\end{figure}
+
 
 \end{document}
